counterparty logic & UI refactorings